# BoxTurtle

./: README.md  electronics_design.md  feeder_control.xml  feeder_control_basic.xml  feeder_control_extended.xml  hardware_config.xml  howto.md
.github/: copilot-instructions.md
.github/workflows/: deploy_docs.yml  render_assets.yml
BT_Wiring/: BOM_Shopping_List.md  BoxTurtle_Pico_Shield.fz  BoxTurtle_Pico_Shield_v2.fz  BoxTurtle_Shield_Basic.fz  BoxTurtle_Shield_Extended.fz  BoxTurtle_Wiring.fz
CAD/: Shield_Mount.scad
docs/: _config.yml  bom.md  configuration.md  credits.md  electronics_design.md  firmware_setup.md  hardware_assembly.md  index.md  user_manual.md
docs/_layouts/: default.html
firmware/: Cargo.toml  README.md
firmware/src/: main.rs  pico_hardware.rs
scripts/: README.md  generate_nav.py  generate_shield_v4.py  generate_variants.py  render_assets.py
