[package]
name = "box_turtle_firmware"
version = "0.1.0"
edition = "2021"
description = "Firmware for Box Turtle 4-Lane Feeder (RP2040)"
license = "MIT"

[features]
default = ["pico"]
pico = []
pico-w = ["cyw43", "cyw43-pio", "embassy-net"]

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { version = "0.1.0" }

# WiFi / Networking (Pico W) - Optional via feature
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"], optional = true }
cyw43-pio = { version = "0.1.0", features = ["defmt", "over-pio0"], optional = true }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"], optional = true }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

# For Servo PWM
embedded-hal = "1.0.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
